<resources>

    <!--NON-TRANSLATABLE-->
    <string name="app_name" translatable="false">DreamTV</string>
    <string name="browse_title" translatable="false"><![CDATA[DreamTV]]></string>

    <!-- Error messages -->
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_inaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="error_subtitle_not_found">Sorry, we could not find subtitles for this video</string>

    <!--ERROR NETWORK MESSAGES-->
    <string name="no_network_connection">No network connection found</string>
    <string name="generic_server_down">Server down</string>
    <string name="generic_server_timeout">Server Timeout</string>
    <string name="generic_error">No internet</string>
    <string name="no_internet">No internet</string>
    <string name="parsing_failed">Parsing Failure</string>
    <string name="auth_failed">Authentication Failure</string>

    <!--SHAREDPREFERENCES-->
    <string name="dreamTVApp_token" translatable="false">dreamTVApp_token</string>
    <string name="user_preferences" translatable="false">user_preferences</string>
    <string name="reasons_preferences" translatable="false">reasons_preferences</string>
    <string name="categories_preferences" translatable="false">categories_preferences</string>
    <string name="video_tests_preferences" translatable="false">video_tests_preferences</string>

    <!--titles-->
    <string name="title_share_mode_settings">Verify mistakes found by others</string>
    <string name="title_video_languages_settings">Video languages</string>
    <string name="title_reasons_dialog">What is wrong here?</string>
    <string name="title_reasons_dialog_2">Edit what have you chosen:</string>
    <string name="title_confirmation_user_saved_data">User data saved correctly</string>
    <string name="title_confirmation_saved_data">Thank you for your help</string>
    <string name="title_my_list_category">My List</string>
    <string name="title_finished_category">Watch again</string>
    <string name="title_test_category">Only for testing</string>
    <string name="title_preferences_category">Settings</string>
    <string name="title_see_more_videos_category">See more videos</string>
    <string name="title_continue_watching_category">Continue watching</string>
    <string name="title_see_all_category">All videos</string>
    <string name="title_topics_category">Topics</string>
    <string name="title_check_new_tasks_category">New releases</string>
    <string name="rb_option_text_english">English</string>
    <string name="rb_option_text_polish">Polish</string>
    <string name="rb_option_text_yes">Yes</string>
    <string name="rb_option_text_not">No</string>
    <string name="rb_option_text_advanced">Advanced</string>
    <string name="rb_option_text_beginner">Simple</string>
    <string name="hint_voice_google_input">Please, say your comment</string>
    <string name="title_current_time_video">%1$s / %2$s</string>
    <string name="title_video_details">%1$s | Audio: %2$s | Subtitle: %3$s | Duration: %4$s | Interface mode: %5$s</string>
    <string name="title_video_details_main">%1$s | Audio: %2$s | Subtitle: %3$s | %4$s</string>
    <string name="title_video_forward">+ %1$d secs</string>
    <string name="title_video_backward">- %1$d secs</string>
    <string name="title_search">Search…</string>
    <string name="title_reasons_others_selected">Selected in advanced mode: %1$s</string>
    <string name="errors_found_finished">You found %1$d error</string>
    <string name="errors_found_finished_plural">You found %1$d errors</string>
    <string name="errors_found_continue">So far %1$d error</string>
    <string name="errors_found_continue_plural">So far %1$d errors</string>

    <!--search-->
    <string name="search_results">Search results for \'%1$s\'</string>
    <string name="no_search_results">No search results found for \'%1$s\'</string>

    <!--buttons-->
    <string name="btn_subtitle">Subtitles</string>
    <string name="btn_audio">Audio</string>
    <string name="btn_save_settings">Save settings</string>
    <string name="btn_save">Save</string>
    <string name="btn_save_changes">Save changes</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save_exit">Save and Exit</string>
    <string name="btn_ok">OK</string>
    <string name="btn_start_recording">Click the mic to record your comment</string>
    <string name="btn_continue_watching">Resume: %1$s</string>
    <string name="btn_no_from_beggining">Play from beginning</string>
    <string name="btn_play_video">Play video</string>
    <string name="btn_add_to_my_list">+ Add to my list</string>
    <string name="btn_remove_to_my_list">- Remove from my list</string>


    <!--alertDialog-->
    <string name="title_alert_dialog">Welcome back</string>
    <string name="title_continue_from_saved_point">Do you want to:</string>

    <!--loadingDialog-->
    <string name="title_loading_buffering">Loading…</string>
    <string name="title_loading_saving_data">Saving user data…</string>
    <string name="title_loading_retrieve_subtitle">Retrieving subtitles…</string>
    <string name="title_loading_retrieve_user_tasks">Retrieving user tasks…</string>
    <string name="title_loading_retrieve_tasks">Retrieving tasks…</string>
    <string name="title_loading_saving_reasons">Saving reasons…</string>
    <string name="title_loading_retrieve_options">Retrieving options…</string>
    <string name="title_loading_add_to_list">Adding video to list…</string>
    <string name="title_loading_preparing_task">Preparing task…</string>
    <string name="title_loading_remove_from_list">Removing video from list…</string>

    <!--Languages-->
    <string name="all_languages">All languages</string>
    <string name="language_chinese">Chinese, Yue</string>
    <string name="language_english">English</string>
    <string name="language_spanish">Spanish</string>
    <string name="language_arabic">Arabic</string>
    <string name="language_french">French</string>
    <string name="language_polish">Polish</string>
    <string name="time_format">%02d:%02d</string>
    <string name="alert_title_video_terminated">Completed!</string>
    <string name="alert_msg_video_terminated">How did you like the video?</string>
    <string name="text_pause">PAUSE</string>


    <!--PREFERENCES-->
    <string name="pref_title_settings">Settings</string>
    <string name="pref_title_app_settings">App settings</string>
    <string name="pref_title_subtitle_settings">Subtitle settings</string>
    <string name="pref_title_subtitle_size">Text Size</string>
    <string name="pref_title_app_language_dialog">Select language</string>
    <string name="pref_title_interface_mode_dialog">Select mode</string>
    <string name="pref_title_video_duration_dialog">Select video duration</string>
    <string name="pref_title_subtitle_size_dialog">Select subtitle size</string>
    <string name="pref_title_audio_language_dialog">Select audio language</string>
    <string name="pref_title_subtitle_language_dialog">Select subtitle language</string>
    <string name="pref_title_audio">Audio</string>
    <string name="pref_title_subtitle">Subtitles</string>
    <string name="pref_title_video_settings">Video Settings</string>
    <string name="pref_title_text_language_settings">App language</string>
    <string name="pref_title_reason_dialog_interface_settings">Interface</string>
    <string name="pref_title_testing_mode_settings">Testing mode</string>
    <string name="pref_title_testing_mode_settings_description">Display videos for testing</string>
    <string name="pref_title_video_duration_settings">Video duration</string>

    <!--PREFERENCES KEYS-->
    <string name="pref_key_list_app_languages" translatable="false">listAppLanguage</string>
    <string name="pref_key_list_interface_mode" translatable="false">listInterfaceMode</string>
    <string name="pref_key_testing_mode" translatable="false">testingMode</string>
    <string name="pref_key_list_audio_languages" translatable="false">listAudioLanguage</string>
    <string name="pref_key_list_subtitle_languages" translatable="false">listSubtitleLanguage</string>
    <string name="pref_key_video_duration" translatable="false">listVideoDuration</string>
    <string name="pref_key_subtitle_size" translatable="false">listSubtitleSize</string>

    <!--DATA FOR SETTINGS-->
    <string-array name="listAudioLanguages">
        <item>Chinese, Yue</item>
        <item>English</item>
        <item>Spanish</item>
        <item>Arabic</item>
        <item>French</item>
        <item>Polish</item>
        <item>All languages</item>
    </string-array>

    <string-array name="listAudioLanguagesValues">
        <item>zh</item>
        <item>en</item>
        <item>es</item>
        <item>ar</item>
        <item>fr</item>
        <item>pl</item>
        <item>NN</item>
    </string-array>


    <string-array name="listSubtitleLanguages">
        <item>Chinese, Yue</item>
        <item>English</item>
        <item>Spanish</item>
        <item>Arabic</item>
        <item>French</item>
        <item>Polish</item>
    </string-array>

    <string-array name="listSubtitleLanguagesValues">
        <item>zh</item>
        <item>en</item>
        <item>es</item>
        <item>ar</item>
        <item>fr</item>
        <item>pl</item>
    </string-array>

    <string-array name="listSubtitleSize">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <string-array name="listSubtitleSizeValues">
        <item>25</item>
        <item>30</item>
        <item>40</item>
    </string-array>


    <string-array name="listAppLanguages">
        <item>Polish</item>
        <item>English</item>
    </string-array>

    <string-array name="listAppLanguagesValues">
        <item>pl</item>
        <item>en</item>
    </string-array>

    <string-array name="listInterfaceMode">
        <item>Beginner</item>
        <item>Advanced</item>
    </string-array>

    <string-array name="listInterfaceModeValues">
        <item>beginner</item>
        <item>advanced</item>
    </string-array>


    <string-array name="listVideoDuration">
        <item>all</item>
        <item>0 – 5 min</item>
        <item>5 – 10 min</item>
        <item>10+ min</item>
    </string-array>

    <string-array name="listVideoDurationValues">
        <item>-1</item>
        <item>0</item>
        <item>300</item>
        <item>600</item>
    </string-array>

</resources>
