<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/pref_title_app_settings">

    <PreferenceCategory>

        <ListPreference
            android:defaultValue="pl"
            android:dialogTitle="@string/pref_title_app_language_dialog"
            android:entries="@array/listAppLanguages"
            android:entryValues="@array/listAppLanguagesValues"
            android:key="@string/pref_key_list_app_languages"
            android:title="@string/pref_title_text_language_settings"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:defaultValue="beginner"
            android:dialogTitle="@string/pref_title_interface_mode_dialog"
            android:entries="@array/listInterfaceMode"
            android:entryValues="@array/listInterfaceModeValues"
            android:key="@string/pref_key_list_interface_mode"
            android:title="@string/pref_title_reason_dialog_interface_settings"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            android:key="@string/pref_key_testing_mode"
            android:summary="@string/pref_title_testing_mode_settings_description"
            android:title="@string/pref_title_testing_mode_settings" />
    </PreferenceCategory>

</PreferenceScreen>