<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/pref_title_video_settings">

    <PreferenceCategory>

        <ListPreference
            android:defaultValue="pl"
            android:dialogTitle="@string/pref_title_audio_language_dialog"
            android:entries="@array/listAudioLanguages"
            android:entryValues="@array/listAudioLanguagesValues"
            android:key="@string/pref_key_list_audio_languages"
            android:title="@string/pref_title_audio"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:defaultValue="-1"
            android:dialogTitle="@string/pref_title_video_duration_dialog"
            android:entries="@array/listVideoDuration"
            android:entryValues="@array/listVideoDurationValues"
            android:key="@string/pref_key_video_duration"
            android:title="@string/pref_title_video_duration_settings"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>