<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/pref_title_subtitle_settings">

    <PreferenceCategory>
        <ListPreference
            android:defaultValue="pl"
            android:dialogTitle="@string/pref_title_subtitle_language_dialog"
            android:entries="@array/listSubtitleLanguages"
            android:entryValues="@array/listSubtitleLanguagesValues"
            android:key="@string/pref_key_list_subtitle_languages"
            android:title="@string/pref_title_subtitle"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:defaultValue="25"
            android:dialogTitle="@string/pref_title_subtitle_size_dialog"
            android:entries="@array/listSubtitleSize"
            android:entryValues="@array/listSubtitleSizeValues"
            android:key="@string/pref_key_subtitle_size"
            android:title="@string/pref_title_subtitle_size"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>